library/general/requirednamespacequotas/samples/example_update_disallowed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-namespace-updated-no-quota
  labels:
    environment: "test"
